# witness-gen-experiments

./: .gitignore  Cargo.toml  README.md  cpp_rs.py  read_constants.py
circuit/: mimc.circom  test.circom  test.r1cs  test.sym
circuit/test_cpp/: test.cpp
circuit/test_js/: test.wasm
src/: abc.rs  macros.rs  main.rs
