[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3" }
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-serialize = { version = "0.3" }
ark-bn254 = { version = "0.3.0"}
rand = { version = "0.8", features = [ "std", "std_rng" ] }
num-bigint = { version = "0.4" }
ruint = { version = "1.3.0", features = [ "serde", "num-bigint", "ark-ff" ] }
byteorder = "1.4.3"